--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,11 @@
-name: CI
-on: [push, workflow_dispatch]
-env:
-  env_var: ${{ vars.REPO_VAR }}
+name: CI on:
+  push:
+    branches: ['main']
+  workflow_dispatch: {}
 jobs:
-  test:
-    env:
-      env_var: “This is a job var”
+  checkout-test:
     runs-on: ubuntu-latest
     steps:
-    - run: echo ${{ env.env_var }}
-      env:
-        env_var: “This is a step var”
+      - name: Checkout repository
+        uses: actions/checkout@v4
+- run: ls -la
