--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: CI 
 on:
   push:
-    branches: ['main']
+    branches: ['master']
   workflow_dispatch: {}
 jobs:
   checkout-test:
@@ -10,5 +10,5 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - uses: actions/setup-node@v1
-      - run: ../scripts/prepare.sh
-      - run: ../scripts/test.sh
+      - run: ./scripts/prepare.sh
+      - run: ./scripts/test.sh
