--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-jobs: test:
+jobs: 
+  test:
     runs-on: ubuntu-latest
     defaults:
       run:
